# vacuus-pico

./: CMakeLists.txt  README.md  blink.c  compile.sh  db.csv  main.c  main.cpp  main.hpp  test_with_valgrind.sh  valgrind-out.txt
utils/: operations.cpp  sd.cpp  sd.hpp
